working done service edit and listing

--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,3 @@
-ENV=dev
-
 # Django Secret Key
 SECRET_KEY=@%k*bh%125ohi%cbayu##np52^x$%scbj2s)ricg6-#+&6si!r
 
@@ -7,8 +5,14 @@ SECRET_KEY=@%k*bh%125ohi%cbayu##np52^x$%scbj2s)ricg6-#+&6si!r
 DEBUG=True
 
 # MySQL Configuration
+# DB_NAME=smart_service_db
+# DB_USER=root
+# DB_PASSWORD=admin
+# DB_HOST=localhost
+# DB_PORT=3306
+
 DB_NAME=smart_service_db
-DB_USER=root
-DB_PASSWORD=admin
+DB_USER=amit
+DB_PASSWORD=Amit@1234
 DB_HOST=localhost
 DB_PORT=3306
