--- a/.env.dev
+++ b/.env.dev
@@ -12,7 +12,7 @@ DEBUG=True
 # DB_PORT=3306
 
 DB_NAME=smart_service_db
-DB_USER=amit
-DB_PASSWORD=Amit@1234
+DB_USER=root
+DB_PASSWORD=admin
 DB_HOST=localhost
 DB_PORT=3306
