db config change in prod

--- a/.env.prod
+++ b/.env.prod
@@ -6,11 +6,11 @@ SECRET_KEY=(s!)e@_d+@h(g-xko0t075v6r(0fse0ydo+budsb56u3k9lp*b
 
 # PostgreSQL (live)
 DB_ENGINE=postgresql
-DB_NAME=loan-app
+DB_NAME=local-smart-service
 DB_USER=neondb_owner
-DB_PASSWORD=npg_GochrIRy90kP
-DB_HOST=ep-gentle-resonance-a5ai7831.us-east-2.aws.neon.tech
+DB_PASSWORD=npg_fjLg7pe4Anhb
+DB_HOST=ep-misty-snow-ae99hxwo.c-2.us-east-2.aws.neon.tech
 DB_PORT=5432
 
 # Schema
-DB_SCHEMA=smart_service_db
+DB_SCHEMA=public
